--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Ubuntu Mono", monospace;
-  color: rgba(0, 0, 0, 0.7);
 }
 
 html {
@@ -18,6 +17,7 @@ html {
 
 body {
   height: 100vh;
+  background-color: rgb(53, 53, 53);
 }
 
 h1 {
@@ -50,6 +50,7 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
+  color: white;
 }
 
 .grid {
@@ -59,7 +60,8 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  outline: 1px solid rgba(0, 0, 0, 0.2);
+  outline: 1px solid rgba(255, 255, 255, 0.2);
+
 }
 
 .mini-grid {
@@ -77,15 +79,21 @@ body {
   width: 20px;
 }
 
+.grid div {
+  border: solid rgba(151, 151, 151, 0.2) 0.5px;
+}
+
+
 .tetromino {
   background-color: blue;
   box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  /* border: 1px solid rgba(0, 0, 0, 0.2); */
+  border: none;
   border-radius: 2px;
 }
 
 .limit {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(151, 151, 151, 0.2);
 }
 
 .controller {
